--- a/main.css
+++ b/main.css
@@ -172,7 +172,9 @@ body {
       .answer-grid .answer-grid__row .answer-grid__answer.type8 {
         background-image: url("elements/RL+GL+BL+.svg"); }
     .answer-grid .answer-grid__row .answer-grid__answer.guess {
-      border: 5px double #FFF; }
+      border: 5px double #F0F; }
+    .answer-grid .answer-grid__row .answer-grid__answer.true {
+      border: 2px solid #FFF; }
     .answer-grid .answer-grid__row .answer-grid__answer > img {
       margin: 3px;
       vertical-align: middle;
@@ -197,6 +199,11 @@ div#log {
   @media screen and (min-width: 805px) {
     div#log {
       top: 165px; } }
+  div#log h3 {
+    position: relative; }
+    div#log h3 button {
+      position: absolute;
+      right: 5px; }
   div#log ul#log__list {
     padding: 0; }
     div#log ul#log__list li {
@@ -206,6 +213,16 @@ div#log {
       background-color: #DDC; }
       div#log ul#log__list li:nth-child(odd) {
         background-color: #e9e9e0; }
+      div#log ul#log__list li div.delete {
+        position: absolute;
+        right: 5px;
+        border: 3px solid white;
+        background-image: url("polarities/error.png");
+        background-size: cover;
+        display: none;
+        vertical-align: middle; }
+        div#log ul#log__list li div.delete.edit {
+          display: inline-block; }
   div#log .bubble {
     width: 35px;
     height: 35px;
